--- a/resources/pages/page1.html
+++ b/resources/pages/page1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-      <title>Tytuł strony</title>
+      <title>Tytul strony</title>
     </head>
     <body>
       Tresc strony
